test/tests/stages/8_loops/valid/while.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CWhile: 
                TIdentifier: (null)
                CBinary: 
                  CLessThan: 
                  CVar: 
                    TIdentifier: a
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 5
                    None: 
                  None: 
                CExpression: 
                  CAssignment: 
                    None: 
                    CVar: 
                      TIdentifier: a
                      None: 
                    CBinary: 
                      CAdd: 
                      CVar: 
                        TIdentifier: a
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 2
                        None: 
                      None: 
                    None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: a
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
